# sgemv-cuda

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cuda_utility.cuh  main.cu  sgemv_kernel.cu  sgemv_kernel.cuh  sgemv_kernel_memo.ptx
